--- a/app/src/main/res/layout/fragment_now_playing.xml
+++ b/app/src/main/res/layout/fragment_now_playing.xml
@@ -27,7 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="@dimen/PdBarMarginTopNow"
         android:visibility="gone"
         android:id="@+id/pdBar"/>
     <TextView
@@ -36,7 +36,7 @@
         android:gravity="center"
         android:visibility="gone"
         android:id="@+id/id"
-        android:text="Progress Get Data..."/>
+        android:text="@string/TextProgressDataNow"/>
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
