--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,16 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="imgDetailHeight">150dp</dimen>
+    <dimen name="imgDetailWidth">100dp</dimen>
+    <dimen name="DetailMarginLinearLayout">10dp</dimen>
+    <dimen name="DetailMarginCardView">10dp</dimen>
+    <dimen name="DetailCornerCardView">5dp</dimen>
+    <dimen name="PdBarMarginTopNow">20dp</dimen>
+    <dimen name="ItemMovieCardCorner">5dp</dimen>
+    <dimen name="ItemMovieMarginCardView">10dp</dimen>
+    <dimen name="ItemMovieMarginLinear">10dp</dimen>
+    <dimen name="ItemImageWidth">100dp</dimen>
+    <dimen name="ItemImageHeight">150dp</dimen>
+    <dimen name="ListMarginLinear">10dp</dimen>
 </resources>
